--- a/animals_update/localisation/rel_gov_and_titles.csv
+++ b/animals_update/localisation/rel_gov_and_titles.csv
@@ -82,6 +82,8 @@ d_immortal_herd;Immortals herds;Hordes immortelles;;;;;;;;;;;;x
 d_immortal_herd_adj;animal;animale;;;;;;;;;;;;x
 d_Invasive_order;The invasive order;L'ordre invasif;;;;;;;;;;;;x
 d_Invasive_order_adj;animal;animale;;;;;;;;;;;;x
+d_hunting_gards;The dog hunting guardians;Les gardes-chiens;;;;;;;;;;;;x
+d_hunting_gards_adj;animal;animale;;;;;;;;;;;;x
 
 #job title names
 action_repress_vassal;Repress vassals;réprimer des vassaux;;;;;;;;;;;;x
