--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -389,5 +389,8 @@ tb_cat_stable_3;Stables;Étable;;;;;;;;;;;;x
 tb_cat_stable_4;Stables;Étable;;;;;;;;;;;;x
 
 ### DOG update
+ca_dog_retinue_1;Dogs clan;Clan des chiens;;;;;;;;;;;;x
+ca_dog_retinue_2;Dogs clan;Clan des chiens;;;;;;;;;;;;x
+ca_dog_retinue_3;Dogs clan;Clan des chiens;;;;;;;;;;;;x
 ca_dog_speciality_1;Prestigious statue;Statue prestigieuse;;;;;;;;;;;;x
 ca_dog_speciality_2;Prestigious statue;Statue prestigieuse;;;;;;;;;;;;x
