--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -397,6 +397,13 @@ ca_dog_knights_1;Training field;Terrain d'entraînement;;;;;;;;;;;;x
 ca_dog_knights_2;Training field;Terrain d'entraînement;;;;;;;;;;;;x
 ca_dog_knights_3;Training field;Terrain d'entraînement;;;;;;;;;;;;x
 ca_dog_knights_4;Training field;Terrain d'entraînement;;;;;;;;;;;;x
+ca_dog_shop_1;Military shop;Commerces militaires;;;;;;;;;;;;x
+ca_dog_shop_2;Military shop;Commerces militaires;;;;;;;;;;;;x
+ca_dog_shop_3;Military shop;Commerces militaires;;;;;;;;;;;;x
+ca_dog_shop_4;Military shop;Commerces militaires;;;;;;;;;;;;x
+ca_dog_shop_5;Military shop;Commerces militaires;;;;;;;;;;;;x
+ca_dog_shop_6;Military shop;Commerces militaires;;;;;;;;;;;;x
+ca_dog_shop_7;Military shop;Commerces militaires;;;;;;;;;;;;x
 ca_dog_retinue_1;Dogs clan;Clan des chiens;;;;;;;;;;;;x
 ca_dog_retinue_2;Dogs clan;Clan des chiens;;;;;;;;;;;;x
 ca_dog_retinue_3;Dogs clan;Clan des chiens;;;;;;;;;;;;x
