bat_3 - tribe retinue building

--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -404,8 +404,12 @@ ca_dog_shop_4;Military shop;Commerces militaires;;;;;;;;;;;;x
 ca_dog_shop_5;Military shop;Commerces militaires;;;;;;;;;;;;x
 ca_dog_shop_6;Military shop;Commerces militaires;;;;;;;;;;;;x
 ca_dog_shop_7;Military shop;Commerces militaires;;;;;;;;;;;;x
-ca_dog_retinue_1;Dogs clan;Clan des chiens;;;;;;;;;;;;x
-ca_dog_retinue_2;Dogs clan;Clan des chiens;;;;;;;;;;;;x
-ca_dog_retinue_3;Dogs clan;Clan des chiens;;;;;;;;;;;;x
+ca_dog_retinue_1;Dogs' clan;Clan des chiens;;;;;;;;;;;;x
+ca_dog_retinue_2;Dogs' clan;Clan des chiens;;;;;;;;;;;;x
+ca_dog_retinue_3;Dogs' clan;Clan des chiens;;;;;;;;;;;;x
 ca_dog_speciality_1;Prestigious statue;Statue prestigieuse;;;;;;;;;;;;x
 ca_dog_speciality_2;Prestigious statue;Statue prestigieuse;;;;;;;;;;;;x
+tb_dog_retinue_1;Dogs' clan;Clan des chiens;;;;;;;;;;;;x
+tb_dog_retinue_1;Dogs' clan;Clan des chiens;;;;;;;;;;;;x
+tb_dog_retinue_1;Dogs' clan;Clan des chiens;;;;;;;;;;;;x
+tb_dog_retinue_1;Dogs' clan;Clan des chiens;;;;;;;;;;;;x
