--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -409,6 +409,10 @@ ca_dog_retinue_2;Dogs' clan;Clan des chiens;;;;;;;;;;;;x
 ca_dog_retinue_3;Dogs' clan;Clan des chiens;;;;;;;;;;;;x
 ca_dog_speciality_1;Prestigious statue;Statue prestigieuse;;;;;;;;;;;;x
 ca_dog_speciality_2;Prestigious statue;Statue prestigieuse;;;;;;;;;;;;x
+tb_dog_weapons_1;Weapons stock;Réserve d'armes;;;;;;;;;;;;x
+tb_dog_weapons_2;Weapons stock;Réserve d'armes;;;;;;;;;;;;x
+tb_dog_weapons_3;Weapons stock;Réserve d'armes;;;;;;;;;;;;x
+tb_dog_weapons_4;Weapons stock;Réserve d'armes;;;;;;;;;;;;x
 tb_dog_retinue_1;Dogs' clan;Clan des chiens;;;;;;;;;;;;x
 tb_dog_retinue_1;Dogs' clan;Clan des chiens;;;;;;;;;;;;x
 tb_dog_retinue_1;Dogs' clan;Clan des chiens;;;;;;;;;;;;x
