--- a/animals_update/localisation/buildings.csv
+++ b/animals_update/localisation/buildings.csv
@@ -409,6 +409,10 @@ ca_dog_retinue_2;Dogs' clan;Clan des chiens;;;;;;;;;;;;x
 ca_dog_retinue_3;Dogs' clan;Clan des chiens;;;;;;;;;;;;x
 ca_dog_speciality_1;Prestigious statue;Statue prestigieuse;;;;;;;;;;;;x
 ca_dog_speciality_2;Prestigious statue;Statue prestigieuse;;;;;;;;;;;;x
+tb_dog_training_1;Training ground;terrains d'entraînement;;;;;;;;;;;;x
+tb_dog_training_2;Training ground;terrains d'entraînement;;;;;;;;;;;;x
+tb_dog_training_3;Training ground;terrains d'entraînement;;;;;;;;;;;;x
+tb_dog_training_4;Training ground;terrains d'entraînement;;;;;;;;;;;;x
 tb_dog_weapons_1;Weapons stock;Réserve d'armes;;;;;;;;;;;;x
 tb_dog_weapons_2;Weapons stock;Réserve d'armes;;;;;;;;;;;;x
 tb_dog_weapons_3;Weapons stock;Réserve d'armes;;;;;;;;;;;;x
