gov_1 - def government

--- a/animals_update/localisation/rel_gov_and_titles.csv
+++ b/animals_update/localisation/rel_gov_and_titles.csv
@@ -54,6 +54,8 @@ Eleph_feudal_gov;Elephant's feodality;Féodalité éléphantine;;;;;;;;;;;;x
 Eleph_feudal_gov_desc;Government made by elephant for elephant;Gouvernement fait par les éléphant pour les éléphant;;;;;;;;;;;;x
 cat_feudal_gov;Cat's feodality;Féodalité des chats;;;;;;;;;;;;x
 cat_feudal_gov_desc;Government made by cats for cats;Gouvernement fait par les chats pour les chats;;;;;;;;;;;;x
+dog_feudal_gov;Dog's feodality;Féodalité des chiens;;;;;;;;;;;;x
+dog_feudal_gov_desc;Governement made by dogs for dogs;Gouvernement fait par les chiens pour les chiens;;;;;;;;;;;;x
 
 ###minor titles
 title_bear_children;Honor child;Enfant d'honneur;;;;;;;;;;;;x
