gov_2 - fix missing localisation

--- a/animals_update/localisation/Game_rule_and_laws.csv
+++ b/animals_update/localisation/Game_rule_and_laws.csv
@@ -38,6 +38,7 @@ panda_expension_size_huge;Big;Grande;;;;;;;;;;;;s
 panda_expension_size_huge_desc;Big expension allowed;Grande expension autorisé;;;;;;;;;;;;x
 
 dog_unity_laws;Cultural unity;Unité culturel;;;;;;;;;;;;x
+dog_unity_laws_desc;Those law are used to authorize a dog ruler to promote cultural unity inside is land;Ces lois sont faite pour permettre à un dirigeant chien de promouvoir l'unité culturel au sein de ses terres;;;;;;;;;;;;x
 dog_unity_county_conv;County;Comté;;;;;;;;;;;;x
 dog_unity_county_conv_desc;Allow county cultural unity improvment;Permet l'unité culturel au sein d'un comté;;;;;;;;;;;;x
 dog_unity_character_conv;Humans;Humains;;;;;;;;;;;;x
