gov_2 - last unity law

--- a/animals_update/localisation/Game_rule_and_laws.csv
+++ b/animals_update/localisation/Game_rule_and_laws.csv
@@ -43,6 +43,8 @@ dog_unity_county_conv;County;Comté;;;;;;;;;;;;x
 dog_unity_county_conv_desc;Allow county cultural unity improvment;Permet l'unité culturel au sein d'un comté;;;;;;;;;;;;x
 dog_unity_character_conv;Humans;Humains;;;;;;;;;;;;x
 dog_unity_character_conv_desc;Allow cultural unity in your court;Permet l'unité culturel au sein de votre court;;;;;;;;;;;;x
+dog_unity_reputation_cost;Price;Prix;;;;;;;;;;;;x
+dog_unity_reputation_cost_desc;Allow to force unity without using prestige or wildness;Permet d'unir le peuple sans utiliser de prestige ou de piété;;;;;;;;;;;;x
 
 ##laws tooltip
 ALL_BUREAUCRATIC_VASSAL_UNACCEPTED;All panda bureaucratic vassal now count as vassal;Tous les vassaux bureaucratiques pandas comptent en tant que vassal;;;;;;;;;;;;x
@@ -55,3 +57,4 @@ PANDA_INDEPENDENCE_ELVOLVED;Independences factions now lower vassal acceptance l
 dog_tt_unity_recent_change;Did not recently change an unity law;N'a pas récemment changé de loi d'unité;
 dog_tt_allow_county_conversion;Allow the cultural conversion on counties;Permet la conversion culturel des comtés;;;;;;;;;;;;x
 dog_tt_allow_character_conversion;Allow character transformation into dogs;Permet de transformer des humains en chiens;;;;;;;;;;;;x
+dog_tt_price_cost_conv_reduction;Remove the prestige or wildness cost to unite the country;Retire le coût de prestige ou de sauvegerie pour unifier le domaine;;;;;;;;;;;;x
