--- a/animals_update/localisation/Modifier.csv
+++ b/animals_update/localisation/Modifier.csv
@@ -206,6 +206,9 @@ cat_forced_alliance;Forced alliance;Alliance forcé;;;;;;;;;;;;x
 cat_controlled_holding;Controlled by cats;Contrôlé par des chats;;;;;;;;;;;;x
 
 ##### dog modifier
+dog_penalty_popular;unsatified council;Conseil insatisfait;;;;;;;;;;;;x
+dog_penalty_economic;unsatified council;Conseil insatisfait;;;;;;;;;;;;x
+dog_penalty_military;unsatified council;Conseil insatisfait;;;;;;;;;;;;x
 
 #religion modifier
 dog_rel_unity_penality;Forced conversion;Conversion forcé;;;;;;;;;;;;x
